_deployment/service.template.yaml
######
apiVersion: v1
kind: Service
metadata:
  name: poc-nodejs
  namespace: default
  labels:
    app: poc-nodejs
    topic: default
    language: nodejs
spec:
  ports:
  - name: api-svc
    port: ${APP_PORT}
    targetPort: api-pod
    protocol: TCP
  selector:
    app: poc-nodejs
    topic: default
    language: nodejs
