_deployment/ingress.template.yaml
######
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${TRAVIS_REPO_SLUG}-ing
  namespace: default
  labels:
    app: ${TRAVIS_REPO_SLUG}
    topic: default
    language: nodejs
  annotations:
    #kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  # tls:
  # - hosts:
  #   - ${HOST}
  #   secretName: nodejs-api-tls
  rules:
  - host: ${HOST}
    http:
      paths:
      - path: /nodejs-api
        backend:
          serviceName: ${TRAVIS_REPO_SLUG}
          servicePort: api-svc
